--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="./css/admin.css">
+    <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#007bff">
+
 </head>
 <body>
     <div class="header">
