--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,9 @@
     <title>Login</title>
     <link rel="stylesheet" href="./css/login.css">
     <script src="./js/auth.js"></script>
+    <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#007bff">
+
 </head>
 <body>
     <div class="login-container">
