--- a/frontend/user.html
+++ b/frontend/user.html
@@ -6,6 +6,9 @@
     <title>User Dashboard</title>
     <script defer src="./js/user.js"></script>
     <link rel="stylesheet" href="./css/user.css">
+    <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#007bff">
+
     
 </head>
 <body>
