--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Panel</title>
     <link rel="stylesheet" href="./css/admin.css">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./public/manifest.json">
 <meta name="theme-color" content="#007bff">
 
 </head>
