--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="./css/login.css">
     <script src="./js/auth.js"></script>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="./public/manifest.json">
 <meta name="theme-color" content="#007bff">
 
 </head>
