--- a/admin.html
+++ b/admin.html
@@ -8,9 +8,9 @@
     <link rel="manifest" href="/manifest.json">
     
     <!-- iOS Support -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="mobile-web-app-status-bar-style" content="black">
-    <link rel="touch-icon" href="images/icon-192x192.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="apple-touch-icon" href="images/icon-192x192.png">
 </head>
 <body>
     <div class="header">
