--- a/user.html
+++ b/user.html
@@ -7,7 +7,7 @@
     <script defer src="./js/user.js"></script>
     <link rel="stylesheet" href="./css/user.css">
     <link rel="manifest" href="/manifest.json">
-    script src="./js/install-prompt.js"></script>
+    <script src="./js/install-prompt.js"></script>
     
     <!-- iOS Support -->
    <meta name="apple-mobile-web-app-capable" content="yes">
