--- a/admin.html
+++ b/admin.html
@@ -6,6 +6,7 @@
     <title>Admin Panel</title>
     <link rel="stylesheet" href="./css/admin.css">
     <link rel="manifest" href="/manifest.json">
+    <script src="./js/install-prompt.js"></script>
     
     <!-- iOS Support -->
     <meta name="apple-mobile-web-app-capable" content="yes">
