--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="apple-touch-icon" href="images/icon-192x192.png">
     <script src="./js/auth.js"></script>
+    <script src="./js/install-prompt.js"></script>
 </head>
 <body>
     <div class="login-container">
